--- a/yourPCBuddy/src/main/WebContent/WEB-INF/web.xml
+++ b/yourPCBuddy/src/main/WebContent/WEB-INF/web.xml
@@ -18,7 +18,7 @@
   </resource-ref>
   <servlet>
     <servlet-name>ProductControl</servlet-name>
-    <servlet-class>model.ProductControl</servlet-class>
+    <servlet-class>control.ProductControl</servlet-class>
   </servlet>
   <servlet-mapping>
     <servlet-name>ProductControl</servlet-name>
