modificato metodo salvataggio immagini

--- a/yourPCBuddy/pom.xml
+++ b/yourPCBuddy/pom.xml
@@ -58,5 +58,10 @@
 			<artifactId>jstl</artifactId>
 			<version>1.2</version>
 		</dependency>
-	</dependencies>
+        <dependency>
+            <groupId>javax.servlet</groupId>
+            <artifactId>javax.servlet-api</artifactId>
+            <version>3.1.0</version>
+        </dependency>
+    </dependencies>
 </project>
