--- a/yourPCBuddy/pom.xml
+++ b/yourPCBuddy/pom.xml
@@ -31,6 +31,10 @@
 			</plugin>
 		</plugins>
 	</build>
+	<properties>
+  		<sonar.organization>giogiosici</sonar.organization>
+  		<sonar.host.url>https://sonarcloud.io</sonar.host.url>
+	</properties>
 	<dependencies>
 		<!-- https://mvnrepository.com/artifact/javax.servlet.jsp.jstl/jstl-api -->
 		<dependency>
