--- a/yourPCBuddy/sonar-project.properties
+++ b/yourPCBuddy/sonar-project.properties
@@ -7,7 +7,10 @@ sonar.organization=giogiosici
 
 
 # Path is relative to the sonar-project.properties file. Replace "\" by "/" on Windows.
-#sonar.sources=.
+
+sonar.sources=.
+sonar.java.binaries=.
+
 
 # Encoding of the source code. Default is default system encoding
 #sonar.sourceEncoding=UTF-8
